Removed some unnecessary overflow-y styles. Modal content will scroll to top when clicking on project, fixing persistent overflow issues when hopping between projects.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,7 +621,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-y: auto;
   overscroll-behavior: contain;
   z-index: 20;
   pointer-events: none;
@@ -700,7 +699,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow-y: auto;
   overscroll-behavior: contain;
   z-index: 20;
   pointer-events: none;
